@@ -264,10 +264,14 @@ class Record(SignalEvent):
         value['id'] = self.id
         return value
 
-    def get_on_change_value(self):
+    def get_on_change_value(self, skip=None):
         value = {}
         for name, field in self.group.fields.iteritems():
-            if name not in self._loaded and self.id >= 0:
+            if skip and name in skip:
+                continue
+            if (self.id >= 0
+                    and (name not in self._loaded
+                        or name not in self.modified_fields)):
                 continue
             value[name] = field.get_on_change_value(self)
         value['id'] = self.id
